# faudit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: cmd.rs  init.rs  mod.rs  new.rs
src/precheck/: check_cmd.rs  mod.rs
src/temp/: box.R  clean.R  report.qmd
src/util/: error.rs  fio.rs  mod.rs  utils.rs
