[package]
name = "faudit"
version = "0.1.0"
edition = "2021"
authors = ["Stewart Li"]
description = "A financial audit workflow tool"
categories = ["workflow"]
repository = "https://github.com/stewartli/faudit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "=0.9.32"
